--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     <div id="main-container" class="main">
 
     </div>
+    <br>
+    <br>
+    <div id="main-container2" class="main2">
+
+    </div>
 
 <br><br><br><br><br>
     <!-- main body ends -->
