--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
     <input class="rounded border-2  text-dark" id="meal-search" type="text" placeholder="Search your meal">
     <br><br>
-    <button class="btn bg-danger text-light rounded" onclick="findMeal()" >Search</button>
+    <button  class="btn bg-danger text-light rounded" onclick="findMeal()" >Search</button>
     <br><br>
-    <div id="main-container" class="main">
+    <div id="main-container" class=" bg-success text-light main">
 
     </div>
     <br>
     <br>
-    <div id="main-container2" class="main2">
+    <div id="main-container2" class="bg-info text-dark main2">
 
     </div>
 
